split game into separate modules